Add --enable-preview for testchariot